# oikura

./: .dockerignore  .gitignore  Dockerfile  README.md  config.sample.ini  docker-compose.yml  requirements.txt
config/: config.sample.ini
oikura/: __main__.py  config.py
oikura/client/: __init__.py  bot.py
oikura/handlers/: __init__.py  commands.py  media.py
oikura/media/: __init__.py  pixiv.py  twitter.py
oikura/utils/: __init__.py  pixiv.py  twitter_caption.py  twitter_extractor.py  twitter_media.py  twitter_rust_screenshot.py  twitter_screenshot.py  urls.py
rust_renderer/: Cargo.toml  README.md
rust_renderer/src/: main.rs
