[package]
name = "oikura-rust-render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cosmic-text = "0.19"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
resvg = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.11"
usvg = "0.45"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
